Fix homepage navigation spacing and font loading issues
- Added proper spacing between navigation links on homepage
- Changed font-display from swap to block for Guyot Headline Light
- Added font debugging class to about page
- Restarted dev server to ensure latest changes are served

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ body {
   src: url('./fonts/Guyot Headline v2.000/GuyotHeadline-Light.otf') format('opentype');
   font-weight: 300;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 .split { display: grid; grid-template-columns: 60% 40%; width: 100vw; height: 100dvh; }
